Fix spacing, fix requirement of fields in course email form

--- a/evap/static/css/evap.css
+++ b/evap/static/css/evap.css
@@ -356,7 +356,6 @@ Side notes for calling out things
 
 .email-form .form-row {
     clear:both;
-    padding: 15px 0;
 }
 
 .email-form .form-label {
